k8s/05-php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-php
  namespace: k8s-basics
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel-php
  template:
    metadata:
      labels:
        app: laravel-php
    spec:
      containers:
        - name: php
          image: atrem2023/app-php:amd64
          ports:
            - containerPort: 9000
