k8s/09.1-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: k8s-basics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0.11-alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
          args: ["--save", "60", "1", "--loglevel", "warning"]
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
