k8s/04.2-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: k8s-basics
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
