k8s/05.1-php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: k8s-basics
spec:
  ports:
    - name: fpm
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: laravel-php
