k8s/06.2-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: k8s-basics
  labels:
    app: laravel-nginx
spec:
  type: NodePort
  selector:
    app: laravel-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
