k8s/09.2-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: k8s-basics
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
